Aos added ,icon added on timeline stages

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 
     <!--    Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Semi+Expanded:300,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
     <!--    Fonts ends here-->
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!--    AOS library-->
+    <link href="css/aos.css" rel="stylesheet">
 
     <!-- Your custom styles (optional) -->
     <link href="css/style.css" rel="stylesheet">
@@ -26,12 +29,12 @@
     <!-- Start your project here-->
     <!--    Header starts here-->
     <div class="container">
-        <div >
+        <div>
             <div class="profile-name effect-1 ">
-            <h1>Salman Sakib</h1>
+                <h1>Salman Sakib</h1>
+            </div>
         </div>
-        </div>
-        
+
     </div>
     <!--    header ends here-->
     <!--    profile image-->
@@ -44,28 +47,28 @@
 
     <!--    Social section-->
     <div class="social-position">
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-github"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-google"></a>
-        <a href="#" class="fa fa-linkedin"></a>
-        <a href="#" class="fa fa-youtube"></a>
-        <a href="#" class="fa fa-instagram"></a>
-        <a href="#" class="fa fa-pinterest"></a>
-        <a href="#" class="fa fa-skype"></a>
+        <a href="#" class="fa fa-facebook effect-1"></a>
+        <a href="#" class="fa fa-github effect-1"></a>
+        <a href="#" class="fa fa-twitter effect-1"></a>
+        <a href="#" class="fa fa-google effect-1" </a>
+        <a href="#" class="fa fa-linkedin effect-1"></a>
+        <a href="#" class="fa fa-youtube effect-1"></a>
+        <a href="#" class="fa fa-instagram effect-1"></a>
+        <a href="#" class="fa fa-pinterest effect-1"></a>
+        <a href="#" class="fa fa-skype effect-1"></a>
     </div>
 
     <!--    Social section ends-->
 
     <!--    timeline starts-->
     <div class="container">
-        <div class="page-header">
+        <div class="timeline-header">
             <h1 id="timeline">Timeline</h1>
         </div>
         <ul class="timeline">
             <li>
-                <div class="timeline-badge"><i class="glyphicon glyphicon-check"></i></div>
-                <div class="timeline-panel">
+                <div class="timeline-badge"><i class="fa fa-briefcase timeline-icon" aria-hidden="true"></i></div>
+                <div class="timeline-panel" data-aos="fade-left">
                     <div class="timeline-heading">
                         <h4 class="timeline-title">Mussum ipsum cacilds</h4>
                         <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
@@ -76,10 +79,11 @@
                 </div>
             </li>
             <li class="timeline-inverted">
-                <div class="timeline-badge warning"><i class="glyphicon glyphicon-credit-card"></i></div>
-                <div class="timeline-panel">
+                <div class="timeline-badge warning"><i class="fa fa-briefcase timeline-icon" aria-hidden="true"></i></div>
+                <div class="timeline-panel" data-aos="fade-right">
                     <div class="timeline-heading">
                         <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
                     </div>
                     <div class="timeline-body">
                         <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
@@ -88,10 +92,11 @@
                 </div>
             </li>
             <li>
-                <div class="timeline-badge danger"><i class="glyphicon glyphicon-credit-card"></i></div>
-                <div class="timeline-panel">
+                <div class="timeline-badge danger"><i class="fa fa-briefcase timeline-icon" aria-hidden="true"></i></div>
+                <div class="timeline-panel" data-aos="fade-left">
                     <div class="timeline-heading">
                         <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
                     </div>
                     <div class="timeline-body">
                         <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
@@ -99,27 +104,31 @@
                 </div>
             </li>
             <li class="timeline-inverted">
-                <div class="timeline-panel">
+                <div class="timeline-badge normal"><i class="fa fa-graduation-cap timeline-icon" aria-hidden="true"></i></div>
+                <div class="timeline-panel" data-aos="fade-right">
                     <div class="timeline-heading">
                         <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
                     </div>
                     <div class="timeline-body">
                         <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+
                     </div>
                 </div>
             </li>
             <li>
-                <div class="timeline-badge info"><i class="glyphicon glyphicon-floppy-disk"></i></div>
-                <div class="timeline-panel">
+                <div class="timeline-badge info"><i class="fa fa-graduation-cap timeline-icon" aria-hidden="true"></i></div>
+                <div class="timeline-panel" data-aos="fade-left">
                     <div class="timeline-heading">
                         <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
                     </div>
                     <div class="timeline-body">
                         <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
                         <hr>
                         <div class="btn-group">
                             <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
-                  <i class="glyphicon glyphicon-cog"></i> <span class="caret"></span>
+                 <i class="fa fa-briefcase timeline-icon" aria-hidden="true"></i> <span class="caret"></span>
                 </button>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="#">Action</a></li>
@@ -134,10 +143,11 @@
             </li>
 
             <li class="timeline-inverted">
-                <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
-                <div class="timeline-panel">
+                <div class="timeline-badge success"><i class="fa fa-graduation-cap timeline-icon" aria-hidden="true"></i></div>
+                <div class="timeline-panel" data-aos="fade-right">
                     <div class="timeline-heading">
                         <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
                     </div>
                     <div class="timeline-body">
                         <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
@@ -154,6 +164,12 @@
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <!-- Bootstrap core JavaScript -->
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <!--    AOS library-->
+    <script type="text/javascript" src="js/aos.js"></script>
+    <script>
+        AOS.init();
+
+    </script>
 
 </body>
 
