--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="timeline-badge"><i class="fa fa-briefcase timeline-icon" aria-hidden="true"></i></div>
                 <div class="timeline-panel" data-aos="fade-left">
                     <div class="timeline-heading">
-                        <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                        <h4 class="timeline-title">Daraz Bangladesh</h4>
                         <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
                     </div>
                     <div class="timeline-body">
