--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <a href="#" class="fa fa-facebook effect-1"></a>
         <a href="#" class="fa fa-github effect-1"></a>
         <a href="#" class="fa fa-twitter effect-1"></a>
-        <a href="#" class="fa fa-google effect-1" </a>
+        <a href="#" class="fa fa-google effect-1"></a>
         <a href="#" class="fa fa-linkedin effect-1"></a>
         <a href="#" class="fa fa-youtube effect-1"></a>
         <a href="#" class="fa fa-instagram effect-1"></a>
@@ -59,6 +59,44 @@
     </div>
 
     <!--    Social section ends-->
+    <!--    About me section-->
+    <div class="container about-container">
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card" data-aos="fade-up-left">
+                    <div class="card-block  card-padding">
+                        <h3 class="card-title">Special title treatment</h3>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4" data-aos="fade-up">
+                <div class="card">
+                    <div class="card-block  card-padding">
+                        <h3 class="card-title">Special title treatment</h3>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4" data-aos="fade-up-right">
+                <div class="card">
+                    <div class="card-block  card-padding">
+                        <h3 class="card-title">Special title treatment</h3>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <!--    About me section ends-->
+
+
 
     <!--    timeline starts-->
     <div class="container">
@@ -71,7 +109,7 @@
                 <div class="timeline-panel" data-aos="fade-left">
                     <div class="timeline-heading">
                         <h4 class="timeline-title">Daraz Bangladesh</h4>
-                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
+                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> October 2017 - Present</small></p>
                     </div>
                     <div class="timeline-body">
                         <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
@@ -82,8 +120,8 @@
                 <div class="timeline-badge warning"><i class="fa fa-briefcase timeline-icon" aria-hidden="true"></i></div>
                 <div class="timeline-panel" data-aos="fade-right">
                     <div class="timeline-heading">
-                        <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
+                        <h4 class="timeline-title">Inflack Limited</h4>
+                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> April 2017 - October 2017</small></p>
                     </div>
                     <div class="timeline-body">
                         <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
@@ -95,8 +133,8 @@
                 <div class="timeline-badge danger"><i class="fa fa-briefcase timeline-icon" aria-hidden="true"></i></div>
                 <div class="timeline-panel" data-aos="fade-left">
                     <div class="timeline-heading">
-                        <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
+                        <h4 class="timeline-title">Renesence Software and Industrial Automation</h4>
+                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> August 2016 - April 2017</small></p>
                     </div>
                     <div class="timeline-body">
                         <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
@@ -107,8 +145,8 @@
                 <div class="timeline-badge normal"><i class="fa fa-graduation-cap timeline-icon" aria-hidden="true"></i></div>
                 <div class="timeline-panel" data-aos="fade-right">
                     <div class="timeline-heading">
-                        <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
+                        <h4 class="timeline-title">American International University, Bangladesh (AIUB)</h4>
+                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>January 2013 - December 2016</small></p>
                     </div>
                     <div class="timeline-body">
                         <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
@@ -120,8 +158,8 @@
                 <div class="timeline-badge info"><i class="fa fa-graduation-cap timeline-icon" aria-hidden="true"></i></div>
                 <div class="timeline-panel" data-aos="fade-left">
                     <div class="timeline-heading">
-                        <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
+                        <h4 class="timeline-title">Gov't Ashek Mahamud college, Jamalpur</h4>
+                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> June 2010 - March 2012</small></p>
                     </div>
                     <div class="timeline-body">
                         <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
@@ -146,7 +184,7 @@
                 <div class="timeline-badge success"><i class="fa fa-graduation-cap timeline-icon" aria-hidden="true"></i></div>
                 <div class="timeline-panel" data-aos="fade-right">
                     <div class="timeline-heading">
-                        <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                        <h4 class="timeline-title">Jamalpur Zilla School, Jamalpur </h4>
                         <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
                     </div>
                     <div class="timeline-body">
@@ -161,6 +199,7 @@
 
     <!-- SCRIPTS -->
     <!-- JQuery -->
+
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <!-- Bootstrap core JavaScript -->
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
