--- a/footer.html
+++ b/footer.html
@@ -173,7 +173,7 @@
     }
 </style>
 <div class="desk-no col-xs-3 drag" id="drag" style="position: absolute;cursor: move;padding: 0 !important;z-index: 99;">
-    <a id="Img" href="https://www.daraz.lk" style="position: fixed;"><img src="https://gw.alicdn.com/tfs/TB13FSWcxn1gK0jSZKPXXXvUXXa-2095-1481.png" style="margin-left: 15% !important;width: 100%;border-radius: 0 !important;border: none !important;"></a>
+    <a id="Img" href="https://www.daraz.com.bd" style="position: fixed;"><img src="https://gw.alicdn.com/tfs/TB13FSWcxn1gK0jSZKPXXXvUXXa-2095-1481.png" style="margin-left: 15% !important;width: 100%;border-radius: 0 !important;border: none !important;"></a>
 </div>
 <div id="category1" style="display: none; position: fixed !important; z-index: 999 !important;background: #f9f9f9 !important; top:0;left:0;height: 100% !important;overflow-y: scroll !important; width: 100% !important;font-family: 'Montserrat', sans-serif !important;">
     <div class="col-xs-5 list-group" style="height: 100%; overflow: scroll;">
@@ -740,7 +740,7 @@
         <div class="div-df div-df-sm">
             <div style="margin-top: -5px !important; margin-bottom: 8px !important;">
                 <div class="col-xs-4 div-contents" style="font-family: 'Montserrat', sans-serif !important;">
-                    <a href="#" style="cursor:pointer !important; font-weight: 600 !important;font-size: 9.6px !important;text-decoration: none !important;color: black;">
+                    <a href="https://pages.daraz.com.bd/wow/i/bd/landingpagetest/custom-footer?hybrid=1" style="cursor:pointer !important; font-weight: 600 !important;font-size: 9.6px !important;text-decoration: none !important;color: black;">
                             <img class="div-img" src="https://gw.alicdn.com/tfs/TB1Wgodb4v1gK0jSZFFXXb0sXXa-208-208.png" style="margin-bottom: 8px;">
                             <span>Homepage</span>
                         </a>
