--- a/index.html
+++ b/index.html
@@ -65,27 +65,27 @@
             <div class="col-sm-4">
                 <div class="card" data-aos="fade-up-left">
                     <div class="card-block  card-padding">
-                        <h3 class="card-title">Special title treatment</h3>
+                        <h3 class="card-title">My Skills</h3>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">Explore Now</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-4" data-aos="fade-up">
                 <div class="card">
                     <div class="card-block  card-padding">
-                        <h3 class="card-title">Special title treatment</h3>
+                        <h3 class="card-title">My Works</h3>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">Check Now</a>
                     </div>
                 </div>
             </div>
             <div class="col-sm-4" data-aos="fade-up-right">
                 <div class="card">
                     <div class="card-block  card-padding">
-                        <h3 class="card-title">Special title treatment</h3>
+                        <h3 class="card-title">My Goals</h3>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">See now</a>
                     </div>
                 </div>
             </div>
@@ -112,7 +112,11 @@
                         <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> October 2017 - Present</small></p>
                     </div>
                     <div class="timeline-body">
-                        <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                        <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois
+                            divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis,
+                            nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium
+                            dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim.
+                            Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
                     </div>
                 </div>
             </li>
@@ -124,7 +128,11 @@
                         <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> April 2017 - October 2017</small></p>
                     </div>
                     <div class="timeline-body">
-                        <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                        <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois
+                            divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis,
+                            nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium
+                            dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim.
+                            Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
 
                     </div>
                 </div>
@@ -137,7 +145,11 @@
                         <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> August 2016 - April 2017</small></p>
                     </div>
                     <div class="timeline-body">
-                        <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                        <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois
+                            divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis,
+                            nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium
+                            dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim.
+                            Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
                     </div>
                 </div>
             </li>
@@ -146,10 +158,15 @@
                 <div class="timeline-panel" data-aos="fade-right">
                     <div class="timeline-heading">
                         <h4 class="timeline-title">American International University, Bangladesh (AIUB)</h4>
-                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>January 2013 - December 2016</small></p>
+                        <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>January 2013 - December
+                                2016</small></p>
                     </div>
                     <div class="timeline-body">
-                        <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                        <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois
+                            divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis,
+                            nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium
+                            dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim.
+                            Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
 
                     </div>
                 </div>
@@ -162,12 +179,16 @@
                         <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> June 2010 - March 2012</small></p>
                     </div>
                     <div class="timeline-body">
-                        <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                        <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois
+                            divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis,
+                            nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium
+                            dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim.
+                            Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
                         <hr>
                         <div class="btn-group">
                             <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
-                 <i class="fa fa-briefcase timeline-icon" aria-hidden="true"></i> <span class="caret"></span>
-                </button>
+                                <i class="fa fa-briefcase timeline-icon" aria-hidden="true"></i> <span class="caret"></span>
+                            </button>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="#">Action</a></li>
                                 <li><a href="#">Another action</a></li>
@@ -188,7 +209,11 @@
                         <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 11 hours ago via Twitter</small></p>
                     </div>
                     <div class="timeline-body">
-                        <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                        <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois
+                            divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis,
+                            nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium
+                            dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim.
+                            Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
                     </div>
                 </div>
             </li>
@@ -196,6 +221,69 @@
     </div>
     <!--    timeline ends-->
     <!-- /Start your project here-->
+    <!-- portpholio section start here-->
+    <div class="container">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+
+
+    <!-- portpholio section ends here  -->
 
     <!-- SCRIPTS -->
     <!-- JQuery -->
@@ -203,11 +291,11 @@
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <!-- Bootstrap core JavaScript -->
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <!--    AOS library-->
     <script type="text/javascript" src="js/aos.js"></script>
     <script>
         AOS.init();
-
     </script>
 
 </body>
