--- a/test.html
+++ b/test.html
@@ -98,6 +98,7 @@
 
     .list-group-item {
         padding: 2.75rem 1.25rem 2.75rem .5rem !important;
+        text-align: center!important;
     }
 
     #category1 {
@@ -598,9 +599,9 @@
 
 </div>
 
-<div id="category2" style=" opacity: 0.5; filter: alpha(opacity=50)">
+<div id="category2" >
     <div class="container">
-        <div class="row">
+        <div class="row" style="padding-top: 20px">
             <div class="col-sm-12">
                 <div style="text-align: center;">
                     <input type="text" name="search" id="search" placeholder="Search Districts (ex: Bogra)"
