--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
         max-height: 700px;
         box-sizing: border-box;
         z-index: 1001;
-        padding-right: 32px;
+        padding-right: 32px;    
     }
 
     .link-class:hover {
@@ -582,11 +582,11 @@
         </div>
 
     </div> -->
-    <a href="#">
+    <a href="https://www.daraz.com.bd/wow/i/bd/cp-campaigns/masher-bazar/?hybrid=1">
         <div
             style="font-family: 'Montserrat', sans-serif !important;position: absolute !important;bottom: 25% !important;left: 42.5% !important;background: #d7d7d7 !important;border-radius: 50px !important;width: 50% !important;">
             <img class="main-cat-img"
-                src="https://laz-img-cdn.alicdn.com/images/ims-web/TB1z33Rg.T1gK0jSZFhXXaAtVXa.jpg"
+                src="https://gw.alicdn.com/tfs/TB1T.zffuH2gK0jSZFEXXcqMpXa-120-120.png"
                 style="float: left;border: 2px solid #d7d7d7;border-radius: 50px;">
             <span
                 style="position: absolute;top: 25%;font-weight: 700 !important;margin-left: 10% !important;font-size: 14px !important;text-transform: uppercase;">Home&nbsp;&nbsp;<i
