--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
         max-height: 700px;
         box-sizing: border-box;
         z-index: 1001;
-        padding-right: 32px;    
+        padding-right: 32px!important;    
     }
 
     .link-class:hover {
@@ -586,7 +586,7 @@
         <div
             style="font-family: 'Montserrat', sans-serif !important;position: absolute !important;bottom: 25% !important;left: 42.5% !important;background: #d7d7d7 !important;border-radius: 50px !important;width: 50% !important;">
             <img class="main-cat-img"
-                src="https://gw.alicdn.com/tfs/TB1T.zffuH2gK0jSZFEXXcqMpXa-120-120.png"
+                src="https://laz-img-cdn.alicdn.com/images/ims-web/TB1s4GOhlr0gK0jSZFnXXbRRXXa.png"
                 style="float: left;border: 2px solid #d7d7d7;border-radius: 50px;">
             <span
                 style="position: absolute;top: 25%;font-weight: 700 !important;margin-left: 10% !important;font-size: 14px !important;text-transform: uppercase;">Home&nbsp;&nbsp;<i
@@ -624,20 +624,20 @@
                 <div class="col-xs-4 div-contents" style="font-family: 'Montserrat', sans-serif !important;">
                     <a href="https://www.daraz.com.bd/wow/i/bd/cp-campaigns/masher-bazar?hybrid=1"
                         style="cursor:pointer !important; font-weight: 600 !important;font-size: 13.6px !important;text-decoration: none !important;color: black;">
-                        <img class="div-img" src="https://gw.alicdn.com/tfs/TB1T.zffuH2gK0jSZFEXXcqMpXa-120-120.png"
+                        <img class="div-img" src="https://laz-img-cdn.alicdn.com/images/ims-web/TB1s4GOhlr0gK0jSZFnXXbRRXXa.png"
                             style="margin-bottom: 8px;">
                         <span>Homepage</span>
                     </a>
                 </div>
                 <div class="col-xs-4 div-contents" onclick="category2()"
                     style="font-family: 'Montserrat', sans-serif !important; cursor: pointer;">
-                    <img class="div-img" src="https://gw.alicdn.com/tfs/TB1aGHffxn1gK0jSZKPXXXvUXXa-120-120.png"
+                    <img class="div-img" src="https://laz-img-cdn.alicdn.com/images/ims-web/TB1JxyOhlr0gK0jSZFnXXbRRXXa.png"
                         style="margin-bottom: 8px;">
                     <span style="cursor:pointer; font-weight: 600;font-size: 13.6px;">Outsite Dhaka</span>
                 </div>
                 <div class="col-xs-4 div-contents" onclick="category1()"
                     style="font-family: 'Montserrat', sans-serif !important; cursor: pointer;">
-                    <img class="div-img" src="https://gw.alicdn.com/tfs/TB13frjfq61gK0jSZFlXXXDKFXa-150-150.png"
+                    <img class="div-img" src="https://laz-img-cdn.alicdn.com/images/ims-web/TB1sxCOhlr0gK0jSZFnXXbRRXXa.png"
                         style="margin-bottom: 8px;">
                     <span style="cursor:pointer; font-weight: 600;font-size: 13.6px;">Categories</span>
                 </div>
