--- a/test.html
+++ b/test.html
@@ -633,7 +633,7 @@
                     style="font-family: 'Montserrat', sans-serif !important; cursor: pointer;">
                     <img class="div-img" src="https://laz-img-cdn.alicdn.com/images/ims-web/TB1JxyOhlr0gK0jSZFnXXbRRXXa.png"
                         style="margin-bottom: 8px;">
-                    <span style="cursor:pointer; font-weight: 600;font-size: 13.6px;">Outsite Dhaka</span>
+                    <span style="cursor:pointer; font-weight: 600;font-size: 13.6px;">Outside Dhaka</span>
                 </div>
                 <div class="col-xs-4 div-contents" onclick="category1()"
                     style="font-family: 'Montserrat', sans-serif !important; cursor: pointer;">
