--- a/test.html
+++ b/test.html
@@ -494,6 +494,12 @@
                     class="center-block sub-listing-img" style="object-fit: contain; width: 100%;"><br></a>
             <h6 class="text-center mxt-60">বাথরুম সামগ্রী</h6>
         </div>
+        <div class="col-xs-6">
+            <a href="https://pages.daraz.com.bd/wow/i/bd/cp-campaigns/tissue-paper?hybrid=1">
+                <img src="https://laz-img-cdn.alicdn.com/images/ims-web/TB1NnJuhO_1gK0jSZFqXXcpaXXa.png"
+                    class="center-block sub-listing-img" style="object-fit: contain; width: 100%;"><br></a>
+            <h6 class="text-center mxt-60">টিস্যু পেপার</h6>
+        </div>
 
     </div>
     <div class="col-xs-7 fixed" id="seventhcat" style="display: none;padding-left: 0px;">
@@ -535,7 +541,7 @@
             <h6 class="text-center mxt-60">মল্টেড ড্রিংক্স</h6>
         </div>
         <div class="col-xs-6">
-            <a href="https://pages.daraz.com.bd/wow/i/bd/cp-campaigns/masher-bazar-sub-cat-7d?hybrid=1">
+            <a href="https://pages.daraz.com.bd/wow/i/bd/cp-campaigns/maser-bazar-sub-cat-2a?hybrid=1">
                 <img src="https://laz-img-cdn.alicdn.com/images/ims-web/TB16L3Ug8r0gK0jSZFnXXbRRXXa.jpg"
                     class="center-block sub-listing-img" style="object-fit: contain; width: 100%;"></a><br>
             <h6 class="text-center mxt-60">ডেইরী</h6>
