Search Page Update v2

--- a/test.html
+++ b/test.html
@@ -38,6 +38,20 @@
         background-color: #f1f1f1;
     }
 
+    .lzd-act-richtext ol,
+    .lzd-act-richtext ul {
+        padding-left: 1px !important;
+        padding-right: 29px !important;
+    }
+
+    .lzd-act-richtext img {
+        position: relative !important;
+        top: 0% !important;
+        border-radius: 100% !important;
+        border: none !important;
+        margin-bottom: 3px !important;
+    }
+
     @media(max-width: 767px) {
         .mui-zebra-page {
             background-size: contain !important;
@@ -635,7 +649,7 @@
                 </div>
                 <div>
                     <img src="https://img.alicdn.com/tfs/TB10.VUi7L0gK0jSZFtXXXQCXXa-251-251.svg" height="250px"
-                        width="250px" style="text-align: center; opacity: 0.2; padding-left: 88px;">
+                        width="250px" style="text-align: center; opacity: 0.2; padding:57px;">
                     <h3 style="text-align: center;">More Suggations for you</h3>
                 </div>
                 <div>
