--- a/test.html
+++ b/test.html
@@ -40,15 +40,15 @@
 
     .lzd-act-richtext ol,
     .lzd-act-richtext ul {
-        padding-left: 1px !important;
-        padding-right: 29px !important;
+        padding-left: 0px !important;
+        padding-right: 0px !important;
     }
 
     .lzd-act-richtext img {
         position: relative !important;
         top: 0% !important;
         border-radius: 100% !important;
-        border: none !important;
+        border: 1px solid #fff !important;
         margin-bottom: 3px !important;
     }
 
