search page Update v5

--- a/test.html
+++ b/test.html
@@ -41,7 +41,7 @@
     .lzd-act-richtext ol,
     .lzd-act-richtext ul {
         padding-left: 0px !important;
-        padding-right: 30px !important;
+        padding-right: 30   px !important;
     }
 
     .lzd-act-richtext img {
@@ -638,7 +638,7 @@
                 <div>
                     <img src="https://img.alicdn.com/tfs/TB10.VUi7L0gK0jSZFtXXXQCXXa-251-251.svg" height="250px"
                         width="250px" style="text-align: center; opacity: 0.2; padding:57px;">
-                    <h3 style="text-align: center;">More Suggations for you</h3>
+                    <h3 style="text-align: center;">More Suggestions for you</h3>
                 </div>
                 <div>
                     <ul class="list-group" id="result1"></ul>
