--- a/test.html
+++ b/test.html
@@ -78,7 +78,7 @@
         display: none !important;
     }
 
-    
+
 
     .div-list-main {
         padding-left: 18px !important;
@@ -110,6 +110,8 @@
     .list-group {
         padding-left: 0px !important;
         padding-right: 30px !important;
+        margin-bottom: 20px!important;
+        margin-left: -25px!important;
     }
 
     .list-group-item-action:active {
